# robogym

./: .gitignore  Makefile  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup.sh  tensorboard_instructions.txt  test.py  test_installation.py
agents/: __init__.py  a2c_agent.py  agent_factory.py  base_agent.py  ddpg_agent.py  dqn_agent.py  ppo_agent.py  sac_agent.py  td3_agent.py
backups/20251008_0311_bipedalwalker_ppo/: config.yaml
backups/20251008_0327_bipedalwalker_ppo/: config.yaml  evaluation.json  summary.txt
backups/20251019_1419_cartpole_ppo/: evaluation.json
backups/20251019_1448_lunarlander_ppo/: config.yaml  summary.txt
backups/20251019_1536_pendulum_ppo/: demo.json
backups/20251019_1539_lunarlandercontinuous_ppo/: demo.json  evaluation.json
config/: acrobot_config.yaml  ant_config.yaml  bipedalwalker_config.yaml  cartpole_config.yaml  halfcheetah_config.yaml  hopper_config.yaml  lunarlander_config.yaml  lunarlandercontinuous_config.yaml  mountaincar_config.yaml  mountaincarcontinuous_config.yaml  paths_config.yaml  pendulum_config.yaml  utilities_config.yaml  walker2d_config.yaml
demos/: demo.json
environments/: __init__.py  base_environment.py  environment_factory.py
evaluations/: bipedalwalker_ppo_eval_20251003_1636.json  bipedalwalker_ppo_eval_20251004_1953.json
hyperparameter_tuning/: optuna.py  optuna_tune_parameters.py  optuna_tuner.py  random_search.py
log/: robogym.log.2025-09-29  robogym.log.2025-10-08  robogym.log.2025-10-09  robogym.log.2025-10-19  robogym.log.2025-10-24  robogym.log.2025-10-25  robogym.log.2025-10-26  robogym.log.2025-10-28  robogym.log.2025-10-29  robogym.log.2025-11-02  robogym.log.2025-11-03  robogym.log.2026-01-12  robogym.log.2026-01-19
utils/: __init__.py  config_manager.py  evaluation_manager.py  functions.py  io.py  logger.py  model_io.py  model_manager.py  run_manager.py  user_interface.py
(+187 files in other folders)
