[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robogym"
version = "0.1.0"
description = "Modular reinforcement learning training pipeline"
authors = [
    {name = "Brady Chin", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
keywords = ["reinforcement-learning", "gymnasium", "stable-baselines3", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "stable-baselines3>=2.7.0",
    "gymnasium>=1.0.0",
    "shimmy[gym-v26]>=2.0.0",
    "torch>=2.5.0",
    "box2d-py>=2.3.5",
    "pygame>=2.6.0",
    "pybullet>=3.2.6",
    "optuna>=4.1.0",
    "tensorboard>=2.18.0",
    "matplotlib>=3.9.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0",
    "tqdm>=4.67.0",
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/bradychin/robogym"
Repository = "https://github.com/bradychin/robogym"
Issues = "https://github.com/bradychin/robogym/issues"

[project.scripts]
robogym = "main:main"

[tool.setuptools.packages.find]
include = ["agents*", "environments*", "utils*", "config*"]
exclude = ["tests*", "docs*", "backups*", "runs*", "log*", "hyperparameter_tuning*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
